@@ -25,30 +25,32 @@ codesupdate <- function(conName="qdacon",assignenv=.rqda,
 				 widget,...){
  ## the widget should be get(".codes_rqda",env=.rqda)
  con <- get(conName,assignenv)
- codesName <- dbGetQuery(con, "select name, id from freecode")
+ codesName <- dbGetQuery(con, "select name, id from freecode where status=1")
  assign(assignfileName, codesName ,env=assignenv) 
  tryCatch(widget[] <- codesName[['name']],error=function(e){})
 }
 
 
 mark <- function(widget){
+  index <- sindex(widget)
+  startI <- index$startI ## start and end iter
+  endI <- index$endI
+  selected <- index$seltext
+  startN <- index$startN # translate iter pointer to number
+  endN <- index$endN
+  if (startN != endN){
   buffer <- slot(widget,"widget")@widget$GetBuffer()
-  bounds = buffer$GetSelectionBounds()
-  startI = bounds$start ## start and end iter
-  endI = bounds$end
-  selected <- buffer$GetText(startI,endI) #get selected text
-  startN <- gtkTextIterGetOffset(startI) # translate iter pointer to number
-  endN <- gtkTextIterGetOffset(endI)
   buffer$createTag("red.foreground",foreground = "red");
   buffer$ApplyTagByName("red.foreground",startI,endI); ## change colors
+   } ##only when selected text chunk is not "", apply the color scheme.
   return(list(start=startN,end=endN,text=selected))
 }
 
-ClearMark <- function(widget,max){
+ClearMark <- function(widget,min=0, max){
 ## max position of marked text.
 tryCatch({
   buffer <- slot(widget,"widget")@widget$GetBuffer()
-  startI <-gtkTextBufferGetIterAtOffset(buffer,0)$iter # translate number back to iter
+  startI <-gtkTextBufferGetIterAtOffset(buffer,min)$iter # translate number back to iter
   endI <-gtkTextBufferGetIterAtOffset(buffer,max)$iter
   gtkTextBufferRemoveTagByName(buffer,"red.foreground",startI,endI)},
   error=function(e){})
@@ -67,5 +69,39 @@ tryCatch(
     buffer$createTag("red.foreground",foreground = "red")  
     buffer$ApplyTagByName("red.foreground",start,end)}),
 error=function(e){})
+}
+
+
+sindex <- function(widget){
+  buffer <- slot(widget,"widget")@widget$GetBuffer()
+  bounds = buffer$GetSelectionBounds()
+  startI = bounds$start ## start and end iter
+  endI = bounds$end
+  selected <- buffer$GetText(startI,endI)
+  startN <- gtkTextIterGetOffset(startI) # translate iter pointer to number
+  endN <- gtkTextIterGetOffset(endI)
+  return(list(startI=startI,endI=endI,
+             startN=startN,endN=endN,seltext=selected))
+}
+
+retrieval <- function(currentCid,conName,env,currentCode="currentCode",assignenv=.rqda){
+  currentCid <- get(currentCid,env)
+  currentCode <- get(currentCode,env)
+  con <- get(conName,env)
+  retrieval <- dbGetQuery(con,sprintf("select cid,fid, seltext from coding where status==1 and cid=%i",currentCid))
+  fid <- unique(retrieval$fid)
+  .gw <- gwindow(title=sprintf("Retrieved text: %s",currentCode),parent=c(270,10),width=600,height=600)
+  .retreivalgui <- gtext(con=.gw)
+  for (i in fid){
+    fname <- paste("Source: ", .rqda$files_index$name[.rqda$files_index$id==i], sep="")
+    seltext <- retrieval$seltext[retrieval$fid==i]
+    ##seltext <- gsub("\n","", seltext,fixed=TRUE)
+    seltext <- paste(seltext,collapse="\n\n")
+    Encoding(seltext) <- "UTF-8"
+    add(.retreivalgui,fname,font.attr=c(style="italic",size="x-large"))
+    add(.retreivalgui,"\n",font.attr=c(style="italic"))
+    add(.retreivalgui,seltext,font.attr=c(style="normal",size="large"))
+    add(.retreivalgui,"\n",font.attr=c(style="italic"))
+  }
 }
 
