@@ -1,1 +1,7 @@
-should add a warning when click "HL ALL" if no project is open.
+#should add a warning when click "HL ALL" if no project is open.
+
+tree-like structure of files/ codes.
+
+delete files/codes.
+
+summary functions for review of coding.
